# airtel_money_rs

./: .env  Cargo.toml  readme.md
src/: lib.rs
src/enums/: country.rs  currency.rs  environment.rs  mod.rs
src/products/: account.rs  cash_in.rs  cash_out.rs  collection.rs  disbursement.rs  mod.rs  remittance.rs
src/requests/: cash_in_payment_request.rs  cash_out_request_payment.rs  collection_refund_request.rs  disbursement_payment_request.rs  mod.rs  remittance_eligibility_request.rs  remittance_refund_request.rs  remittance_transfer_credit_request.rs  remittance_transfer_status_request.rs  token_request.rs  ussd_push_request.rs
src/responses/: account_balance_response.rs  collection_refund_response.rs  collection_ussd_response.rs  disbursement_payment_response.rs  mod.rs  token_response.rs
