[package]
name = "airtel_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"]}
dotenv = "0.15.0"
once_cell = "1.19.0"
reqwest = "0.12.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.33.0", features = ["full"] }

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics"]